# Vela-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/dashboard/templates/: index.html
config/: wsgi.py
vela/: __init__.py  api.py  urls.py
vela/cli/: collectstatic.py  commands.py  main.py  shell.py
vela/core/: api_loader.py  api_router.py  api_server.py  app.py  bridge.py  router.py  shell.html  window.py
vela/log/: logger.py
vela/template_engine/: engine.py
vela/templates/project/: manage.py
vela/templates/project/apps/dashboard/static/: dashboard.css
vela/templates/project/apps/dashboard/templates/: index.html
vela/templates/project/apps/dashboard/views/: __init__.py  dashboard.py
vela/templates/project/apps/home/templates/: home.html
vela/templates/project/apps/home/views/: __init__.py  home.py
vela/templates/project/apps/login/templates/: login.html
vela/templates/project/apps/login/views/: __init__.py  login.py
vela/templates/project/config/: settings.py  wsgi.py
