[project]
name = "vela-framework"
version = "0.1.0"
description = "Framework Python para aplicações desktop"
requires-python = ">=3.10"
dependencies = [
    "pywebview==6.2.1",
    "bottle==0.13.4",
    "proxy_tools==0.1.0",
    "typing_extensions==4.15.0"
]

[project.scripts]
vela = "vela.cli.main:main"

[tool.setuptools]
packages = ["vela"]

[tool.setuptools.package-data]
vela = ["templates/project/**/*"]