[project]
name = "vela-framework"
version = "0.1.0"
description = "Framework Python para aplicações desktop com HTML, CSS, Tailwind e JS — sem navegador"
readme = "README.md"
requires-python = ">=3.10"

# ─── Dependências instaladas automaticamente pelo pip ────────────────────────
#
# Ao rodar:
#   pip install -e .           (desenvolvimento local)
#   pip install vela-framework (futuro PyPI)
#   pip install git+https://github.com/...
#
# O pip instala todas as dependências abaixo automaticamente.
# Não é necessário rodar `pip install -r requirements.txt` separadamente.
#
dependencies = [
    # Janela desktop nativa (GTK/WebKit no Linux, WebView2 no Windows, WKWebView no macOS)
    "pywebview==6.2.1",

    # Servidor HTTP interno usado pelo Vela para servir assets locais
    "bottle==0.13.4",

    # Utilitário de proxy para funções Python expostas ao JS
    "proxy_tools==0.1.0",

    # Extensões de tipagem para compatibilidade com Python 3.10+
    "typing_extensions==4.15.0",
]

# ─── Dependências opcionais ───────────────────────────────────────────────────
#
# Instaladas sob demanda:
#   pip install "vela-framework[linux]"      → dependências GTK/WebKit2 do Linux
#   pip install "vela-framework[dev]"        → ferramentas de desenvolvimento
#
[project.optional-dependencies]

# Nota: no Linux, pycairo e PyGObject são melhor instalados via apt:
#   sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-3.0 gir1.2-webkit2-4.1
# Mas para ambientes que permitam pip puro (CI, Docker), listamos aqui também.
linux = [
    "pycairo>=1.20.0",
    "PyGObject>=3.42.0",
]

dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

# ─── CLI global ───────────────────────────────────────────────────────────────
#
# Após instalar via pip ou pipx, o comando `vela` fica disponível globalmente:
#   vela startproject meu_app
#
[project.scripts]
vela = "vela.cli.main:main"

# ─── Configuração do setuptools ───────────────────────────────────────────────

[tool.setuptools.packages.find]
# Inclui o pacote vela e todos os subpacotes automaticamente
include = ["vela*"]
# Exclui a pasta de logs gerada em runtime
exclude = ["logs*"]

[tool.setuptools.package-data]
# Inclui templates de projeto, shell.html e arquivos não-Python
vela = [
    "templates/project/**/*",
    "templates/project/**/.gitkeep",
    "core/shell.html",
]

# ─── Build system ─────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Ferramentas ──────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
